# raytrace

./: .gitignore  Cargo.toml  build.rs  capture_training_data.py
crend/: Cargo.toml  build.rs  main.c
crend/src/: lib.rs
denoiser/: capture_all.sh  dat_viewer.py  network.py
misc/: capture_perf_data.sh  gen_flamegraph.sh  materials.csv
prototyping/biomes/: biomes.pde
prototyping/height/: height.blend  height.blend1  height.pde
prototyping/p5/: package-lock.json  package.json  server.js  smoothNoise.js  test.js
shaders/: Cargo.toml  assign_lightmaps.comp  basic_raytrace.comp  compute.comp  finalize.comp  update_lightmaps.comp  vertex.vert
shaders/glsl/: GEN_MATERIALS.glsl  basic_raytrace.comp  bilateral_denoise.comp  finalize.comp  raytrace.comp  screen.frag  screen.vert  test.comp
shaders/src/: lib.rs
src/: init.rs  lib.rs  main.rs  presenter.rs  renderer.rs  shaders.rs  util.rs
src/game/: control.rs  mod.rs
src/render/: GEN_MATERIALS.rs  command_buffer.rs  commands.rs  constants.rs  core.rs  core_builder.rs  debug.rs  descriptors.rs  init.rs  mod.rs  pipeline.rs  presenter.rs  renderer.rs  structures.rs  util.rs  utility.rs
src/render/general/: command_buffer.rs  core.rs  core_builder.rs  debug.rs  descriptors.rs  mod.rs  platform_specific.rs  structures.rs
src/render/pipeline/: descriptor_sets.rs  mod.rs  pipeline.rs  render_data.rs  shaders.rs  structs.rs  terrain_upload.rs
src/world/: base.rs  chunk.rs  chunk_storage.rs  functions.rs  generate.rs  generator.rs  heightmap.rs  mod.rs  noises.rs
