[workspace]

[package]
name = "raytrace"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"

[dependencies]
ash = "0.29"
cgmath = "0.17"
image = "0.22"
winit = "0.20.0-alpha6"
time = "0.2"
noise = "0.6"
num = "0.2"
rand = "0.7"
array-macro = "1.0"
shaders = { path = "shaders" }

# Additional dependencies for other platforms 
# https://github.com/unknownue/vulkan-tutorial-rust/blob/master/Cargo.toml
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"
cocoa = "0.20"
objc  = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "libloaderapi"] }