[workspace]

[package]
name = "raytrace"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"

[dependencies]
ash = "0.29"
cgmath = "0.17"
colored = "1.9"
image = "0.22"
winit = "0.21"
time = "0.2"
noise = "0.6"
num = "0.2"
rand = "0.7"
array-macro = "1.0"

# Additional dependencies for other platforms 
# https://github.com/unknownue/vulkan-tutorial-rust/blob/master/Cargo.toml
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"
cocoa = "0.20"
objc  = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "libloaderapi"] }

[build-dependencies]
csv = "1.1"

[profile.dev]
opt-level = 2
overflow-checks = true