[workspace]

[package]
name = "raytrace"
version = "0.1.0"
authors = ["Code_Cube <therealcodecube@gmail.com>"]
edition = "2018"
default-run="main"

[dependencies]
array-macro = "1.0"
ash = "0.29"
byteorder = "1.3"
cgmath = "0.17"
colored = "1.9"
dirs = "2.0"
image = "0.22"
lazy_static = "1.4"
noise = "0.6"
num = "0.2"
rand = "0.7"
time = "0.2"
winit = "0.21"

# Additional dependencies for other platforms 
# https://github.com/unknownue/vulkan-tutorial-rust/blob/master/Cargo.toml
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.17"
cocoa = "0.20"
objc  = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "libloaderapi"] }

[build-dependencies]
csv = "1.1"

[profile.dev]
opt-level = 3
overflow-checks = true

[profile.test]
opt-level = 3
overflow-checks = true